# pixmas-star

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: all_on.py  in_out.py  random_leds.py  slow_walk.py  starcommander.py  twinkle.py
src/pixmas_star/: __about__.py  __init__.py  star.py
