[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixmas-star"
dynamic = ["version"]
description = 'A programmable christmas tree star for Raspberry Pi by ModMyPi'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "mtouzot", email = "martin.touzot@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "gpiozero",
  "rpi.gpio",
]

[project.urls]
Documentation = "https://github.com/mtouzot/pixmas-star#readme"
Issues = "https://github.com/mtouzot/pixmas-star/issues"
Source = "https://github.com/mtouzot/pixmas-star"

[tool.hatch.version]
path = "src/pixmas_star/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pixmas_star tests}"

[tool.coverage.run]
source_pkgs = ["pixmas_star", "tests"]
branch = true
parallel = true
omit = [
  "src/pixmas_star/__about__.py",
]

[tool.coverage.paths]
pixmas_star = ["src/pixmas_star", "*/pixmas-star/src/pixmas_star"]
tests = ["tests", "*/pixmas-star/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
